--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Course-Platform
+server.port=8000
+# --- PostgreSQL CONFIG ---
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5000/course-platform?charSet=UTF-8
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root=info
