port change for swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=Course-Platform
-server.port=8000
+server.port=${PORT:8080}
 spring.jpa.hibernate.ddl-auto=update
 logging.level.root=info
